tests/workflows/tests/snapshots/cert__cert_generate_json_regenerates_for_requested_host.snap
---
source: tests/workflows/tests/cert.rs
assertion_line: 172
expression: envelope
---
{
  "success": true,
  "cert_path": "[CERT_PATH]",
  "key_path": "[KEY_PATH]",
  "ca_freshly_installed": false,
  "cert_freshly_generated": true
}