tests/workflows/tests/snapshots/cert__cert_reconcile_json_empty_preview.snap
---
source: tests/workflows/tests/cert.rs
expression: "json_envelope(&output, \"empty reconcile dry-run\")"
---
{
  "success": true,
  "pending_recovery": false,
  "grace_removed": [],
  "grace_pending": [],
  "stale_removed": [],
  "mtime_fallback": [],
  "reconcile_required_cleared": false,
  "resolved_old_fingerprints": [],
  "pending_old_fingerprints": []
}
