tests/workflows/tests/snapshots/cert__cert_status_json_absent_state.snap
---
source: tests/workflows/tests/cert.rs
expression: envelope
---
{
  "success": true,
  "ca": {
    "exists": false,
    "trusted": false,
    "expires": null,
    "subject": null,
    "days_until_expiry": null
  },
  "project": {
    "exists": false,
    "expires": null,
    "hostnames": [],
    "needs_renewal": false,
    "valid": false,
    "error": null
  },
  "permission_drifts": []
}
