tests/workflows/tests/snapshots/cert__cert_trust_json_installs_ca.snap
---
source: tests/workflows/tests/cert.rs
assertion_line: 77
expression: envelope
---
{
  "success": true,
  "ca_installed": true
}