tests/workflows/tests/snapshots/cert__cert_uninstall_json_removes_trust_store_entry.snap
---
source: tests/workflows/tests/cert.rs
assertion_line: 124
expression: envelope
---
{
  "success": true,
  "ca_uninstalled": true
}